RESOLVED FIXED55162
ASSERTION FAILED: !isInAcceleratedCompositingMode() when entering accelerated compositing early
https://bugs.webkit.org/show_bug.cgi?id=55162
Summary ASSERTION FAILED: !isInAcceleratedCompositingMode() when entering accelerated...
Anders Carlsson
Reported 2011-02-24 11:21:18 PST
ASSERTION FAILED: !isInAcceleratedCompositingMode() when entering accelerated compositing early
Attachments
Patch (4.62 KB, patch)
2011-02-24 11:24 PST, Anders Carlsson
simon.fraser: review+
Anders Carlsson
Comment 1 2011-02-24 11:24:26 PST
Anders Carlsson
Comment 2 2011-02-24 11:25:27 PST
WebKit Review Bot
Comment 3 2011-02-24 15:59:21 PST
http://trac.webkit.org/changeset/79593 might have broken GTK Linux 32-bit Release
Note You need to log in before you can comment on or make changes to this bug.