Source/WebKit2/WebProcess/WebPage/LayerTreeHost.h
@@ -47,7 +47,7 @@ public:
 
     virtual const LayerTreeContext& layerTreeContext() = 0;
     virtual void scheduleLayerFlush() = 0;
-    virtual void setShouldNotifyAfterNextScheduledLayerFlush() = 0;
+    virtual void setShouldNotifyAfterNextScheduledLayerFlush(bool) = 0;
     virtual void setRootCompositingLayer(WebCore::GraphicsLayer*) = 0;
     virtual void invalidate() = 0;
 
